--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^12.7.0",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.7",
+    "i": "^0.3.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
