--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "i": "^0.3.6",
     "pg": "^8.5.1",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
