--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
     "bootstrap": "^4.6.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^8.2.7",
     "i": "^0.3.6",
